--- a/src/components/Repositories/Repositories.module.css
+++ b/src/components/Repositories/Repositories.module.css
@@ -1,10 +1,14 @@
 
 .container{
+    width: 300px;
+    /* background-color: red; */
     margin-top: 0;
     padding: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
 }
-/* .repos{
-} */
+
 .repos h1{
     font-size: 3rem;
     line-height: 1.5;
@@ -15,26 +19,62 @@
 }
 .element input{
     width: 80%;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    padding: 10px;
 }
 ul{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    text-decoration: none;
+    width: 250px;
+    display: block;
+    margin: 10px auto;
+
 }
-.link{
+ .link{
     text-decoration: none;
     color: white;
-    display: block;
-    width: 100%;
 }
 .link:hover{
     color: #666;
 }
+
 li{
-    list-style: none;
-    margin: 10px;
+    width: 200px;
+    list-style-type: none;
+    /* background-color: red; */
     padding: 10px;
     border: 1px solid #333;
     border-radius: 5px;
+    display: block;
+    margin-top: 15px;
 }
+
+.repo-button{
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1.5em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1a1a1a;
+    cursor: pointer;
+    transition: border-color 0.25s;
+    color: aliceblue;
+    margin: 20px;
+    width: 150px;
+}
+
+@media screen {
+    
+}
+/* ul{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    text-decoration: none;
+    text-align: center;
+    background-color: orange;
+    width: 90%;
+    display: block;
+    margin: 10px auto;
+
+} */
