--- a/src/components/Repositories/Repositories.module.css
+++ b/src/components/Repositories/Repositories.module.css
@@ -63,18 +63,37 @@ li{
     width: 150px;
 }
 
-@media screen {
+@media screen and (min-width: 768px){
+    .container{
+        width: 700px;
+        margin-top: 0;
+        padding: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+    }
     
+    .repos h1{
+        font-size: 3rem;
+        line-height: 1.5;
+        letter-spacing: 0.2rem;
+    }
+    .element{
+        margin-top: 30px;
+    }
+    .element input{
+        width: 80%;
+        margin-top: 10px;
+        margin-bottom: 20px;
+        padding: 10px;
+    }
+    ul{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 20px;
+        text-decoration: none;
+        width: 80%;
+        margin: 10px auto;
+    }
 }
-/* ul{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    text-decoration: none;
-    text-align: center;
-    background-color: orange;
-    width: 90%;
-    display: block;
-    margin: 10px auto;
 
-} */
